fixes on mobile

--- a/assets/css/meanmenu.css
+++ b/assets/css/meanmenu.css
@@ -111,7 +111,7 @@ a.meanmenu-reveal {
 }
 
 .mean-container .mean-nav ul li a:hover {
-  background: #252525;
+  background: #ccc;
 }
 
 .mean-container .mean-nav ul li a.mean-expand {
